# gst-plugin-usb

./: Makefile.in  aclocal.m4  atom.xml  configure  configure.ac  index.html
_posts/: 2011-09-05-Almost-first-stable-release.markdown
patches/: CMEM.patch  series
src/: Makefile.am  Makefile.in  cmem.cfg  config.bld  driver.c  driver.h  gstplugin.c  gstusbmessages.h  gstusbsink.c  gstusbsink.h  gstusbsrc.c  gstusbsrc.h  platformdefs.inc  usbgadget.c  usbgadget.h  usbgadget_descriptors.c  usbgadget_descriptors.h  usbhost.c  usbhost.h  usbstring.c  usbstring.h
